--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ h1 {
     text-align: left;
 }
 
+
+.Container-flex {
+    display: flex;
+}
+
 @media only screen and (max-width: 768px) {
     body {
       font-size: 18px;
