--- a/src/components/Films/style.css
+++ b/src/components/Films/style.css
@@ -4,6 +4,7 @@
 
 .Films .Read-more:hover{
     color: #f8a803;
+    text-decoration: none;
 }
 
 .Films {
@@ -64,6 +65,30 @@
     width: 46%;
 }
 
+.Films .Container-main-film div:last-child{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 54%;
+}
+
+.Films .Container-main-film div:last-child button{
+    color: #fff;
+    width: 84px;
+    height: 84px;
+    border: 3px solid #fff;
+    margin-bottom: 10px;
+    display: flex;
+    font-size: 2.8em;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+}
+
+.Films .Container-main-film div:last-child button:hover{
+    text-decoration: none;
+}
+
 .Films .Description{
     text-align: justify;
     font-size: 0.857em;
@@ -87,4 +112,5 @@
 .Films ul.Lists-films li img{
     width: 100%;
     height: auto;
+    max-height: 186px;
 }
