add new styles in section component

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -5,6 +5,7 @@ footer.Footer {
     padding: 35px;
     position: relative;
     overflow: hidden;
+    margin-top: 30px;
 }
 
 footer.Footer::before {
