--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@ h1 {
     border-bottom: 4px solid #525253;
     border-top: 4px solid #525253;
     padding: 20px 0px;
+    margin-bottom: 35px;
+    margin-top: 35px;
     text-align: left;
 }
 
@@ -29,4 +31,13 @@ h1 {
         border-bottom: 2.5px solid #525253;
         border-top: 2.5px solid #525253;
     }
+}
+
+.Read-more{
+    color: #f8a803;
+}
+
+.Read-more:hover{
+    color: #f8a803;
+    text-decoration: none;
 }
